[WIP] auth/AuthPage: display FirebaseUI

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,4 +4,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <app-firebase-ui uiConfig="{{uiConfig}}" firebaseAuth="{{afAuth.auth}}"></app-firebase-ui>
+</ion-content>
